--- a/public/css/fontello/css/fontello-codes.css
+++ b/public/css/fontello/css/fontello-codes.css
@@ -21,3 +21,12 @@
 .icon-left-open-big:before { content: '\e813'; } /* '' */
 .icon-barcode-1:before { content: '\e814'; } /* '' */
 .icon-right-open-big:before { content: '\e815'; } /* '' */
+.icon-lock:before { content: '\e816'; } /* '' */
+.icon-crown:before { content: '\e817'; } /* '' */
+.icon-search:before { content: '\e818'; } /* '' */
+.icon-group:before { content: '\e819'; } /* '' */
+.icon-help:before { content: '\e81a'; } /* '' */
+.icon-ok-1:before { content: '\e81b'; } /* '' */
+.icon-cancel-1:before { content: '\e81c'; } /* '' */
+.icon-help-1:before { content: '\e81d'; } /* '' */
+.icon-thumbs-up-alt:before { content: '\e81e'; } /* '' */
