--- a/public/css/fontello/css/fontello.css
+++ b/public/css/fontello/css/fontello.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?5438182');
-  src: url('../font/fontello.eot?5438182#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff?5438182') format('woff'),
-       url('../font/fontello.ttf?5438182') format('truetype'),
-       url('../font/fontello.svg?5438182#fontello') format('svg');
+  src: url('../font/fontello.eot?11050129');
+  src: url('../font/fontello.eot?11050129#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff?11050129') format('woff'),
+       url('../font/fontello.ttf?11050129') format('truetype'),
+       url('../font/fontello.svg?11050129#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -14,7 +14,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?5438182#fontello') format('svg');
+    src: url('../font/fontello.svg?11050129#fontello') format('svg');
   }
 }
 */
@@ -72,3 +72,12 @@
 .icon-left-open-big:before { content: '\e813'; } /* '' */
 .icon-barcode-1:before { content: '\e814'; } /* '' */
 .icon-right-open-big:before { content: '\e815'; } /* '' */
+.icon-lock:before { content: '\e816'; } /* '' */
+.icon-crown:before { content: '\e817'; } /* '' */
+.icon-search:before { content: '\e818'; } /* '' */
+.icon-group:before { content: '\e819'; } /* '' */
+.icon-help:before { content: '\e81a'; } /* '' */
+.icon-ok-1:before { content: '\e81b'; } /* '' */
+.icon-cancel-1:before { content: '\e81c'; } /* '' */
+.icon-help-1:before { content: '\e81d'; } /* '' */
+.icon-thumbs-up-alt:before { content: '\e81e'; } /* '' */
