--- a/public/css/landing.css
+++ b/public/css/landing.css
@@ -11,28 +11,31 @@
 
 }
 #landingGo > center{
-    font-size: .9em;
-    margin-top: 40px;
+    font-size: .86em;
+    margin-top: 10px;
+    color: rgb(187, 187, 187);
+    font-family: 'Lato';
 }
 #landingGo button{
-    margin-top: 20px;
-    padding-top: 10px;
     position: relative;
-    height: 44px;
-    width: 250px;
-    padding-right: 18px;
-    background: rgb(60, 60, 60);
-    color: rgb(255, 255, 255);
+    margin-top: 40px;
+    height: 40px;
+    width: 130px;
+    text-align: center;
+    background: rgb(255, 255, 255);
+    color: black;
     border: 1px solid #343434;
     font-weight: bolder;
     font-size: .7em;
+    font-family: 'Lato';
+    border-radius: 300px;
 }
 
 #landingWrap h2{
 	/* font-family:'Lato'; */
-	font-size: 2.7em;
+	font-size: 2em;
 	letter-spacing: -2px;
-	margin-top: 20px;
+	margin-top: 100px;
 }
 
 .l-item{
