--- a/public/css/chat.css
+++ b/public/css/chat.css
@@ -19,33 +19,7 @@
 	box-sizing: border-box;
 	font: normal .85em 'Lato';
 }
-#friendListWrap{
-	text-align:center;
-	padding-top:10px;
-	top: -126px;
-	overflow: visible;
-}
-.f-item{
-	margin: 7px 0;
-	width: 100%;
-	background: white;
-	border: 1px solid #ccc;
-	border-left: none;
-	border-right: none;
-	text-align:left;
-	font-size: 15px;
-}
-.f-name{
-	display: inline-block;
-	position:relative;
-	font-size:15px;
-	font-weight:bolder;
-	vertical-align: top;
-}
-.f-img{
-	display:inline-block;
-	margin-top:2px;
-}
+
 .chatLineWrap{
 	outline:none;
 }
@@ -99,7 +73,8 @@
 	width: 100%;
 	height: 100%;
 	padding: 0 20px 1px 13px;
-	font-size: .8em;
+	font-size: 12px;
+	letter-spacing: .2px;
 	color: rgb(89, 89, 89);
 	border: none;
 	border-top: 1px solid #B4B4B4;
@@ -163,4 +138,70 @@ background: white;
 	width: 37px!important;
 	border-radius:100px!important;
 	font-size:11px!important; 
+}
+
+
+/* ----------  FRIENDS  ----------*/
+
+#friendListWrap{
+	text-align:center;
+	padding-top:10px;
+	top: -126px;
+	overflow: visible;
+}
+#friendListWrap button::after{
+	display:none;
+}
+.f-item::after{
+	bottom:20%;
+	left:25%;
+}
+.f-item[data-status="askedHim"]{
+	background: #F4F4F4;
+	/* opacity: .5; */
+}
+.f-item{
+	margin: 7px 0;
+	width: 100%;
+	padding-left: 7px;
+	box-sizing: border-box;
+	background: white;
+	border: 1px solid #ccc;
+	border-left: none;
+	border-right: none;
+	text-align:left;
+	font-size: 15px;
+}
+.f-item button.onHold{
+	color: #595959;
+	background: none;
+}
+.f-item button.onHold:hover{
+	box-shadow:none;
+	cursor:default;
+}
+.f-item i.icon{
+	position:relative;
+}
+.f-item i.icon-user-add{
+	top:-3px; 
+}
+.f-item i.icon-ellipsis{
+	top:-2px;
+	left:-1px;
+}
+.f-item i.icon-ok-1{
+	font-size:0.8em;
+	top:-4px;
+}
+.f-name{
+	display: inline-block;
+	position:relative;
+	font-size:15px;
+	font-weight:bolder;
+	vertical-align: top;
+}
+.f-img{
+	display:inline-block;
+	margin-top:2px;
 }
