--- a/public/css/fontello/css/fontello-codes.css
+++ b/public/css/fontello/css/fontello-codes.css
@@ -30,3 +30,7 @@
 .icon-cancel-1:before { content: '\e81c'; } /* '' */
 .icon-help-1:before { content: '\e81d'; } /* '' */
 .icon-thumbs-up-alt:before { content: '\e81e'; } /* '' */
+.icon-cancel-2:before { content: '\e81f'; } /* '' */
+.icon-ellipsis:before { content: '\e820'; } /* '' */
+.icon-attention-alt:before { content: '\e821'; } /* '' */
+.icon-forward-1:before { content: '\e823'; } /* '' */
