--- a/public/css/fontello/css/fontello-codes.css
+++ b/public/css/fontello/css/fontello-codes.css
@@ -33,4 +33,5 @@
 .icon-cancel-2:before { content: '\e81f'; } /* '' */
 .icon-ellipsis:before { content: '\e820'; } /* '' */
 .icon-attention-alt:before { content: '\e821'; } /* '' */
+.icon-up-dir:before { content: '\e822'; } /* '' */
 .icon-forward-1:before { content: '\e823'; } /* '' */
