--- a/public/css/landing.css
+++ b/public/css/landing.css
@@ -1,7 +1,6 @@
 
 #landingWrap{ 
     text-align: center;
-    font-family: 'Lato';
 }
 
 #landingIntro{
@@ -19,23 +18,22 @@
 #landingGo button{
     position: relative;
     margin-top: 40px;
-    height: 40px;
-    width: 180px;
-    text-align: center;
-    background: none;
-    color: rgb(37, 37, 37);
-    /* border: 1px solid #343434; */
+    margin: 40px 10px 0 10px;
+    height: 46px;
+    width: 210px;
+    padding-right: 16px; 
+    text-align: right; 
     font-weight: bolder;
     font-size: .7em;
     font-family: 'Lato';
-    border-radius: 6px;
+    background: rgb(187, 51, 51);
 }
 
 #landingWrap h2{
 	/* font-family:'Lato'; */
 	font-size: 2em;
 	letter-spacing: -2px;
-	margin-top: 100px;
+	margin-top: 30px;
 }
 
 .l-item{
@@ -71,4 +69,36 @@
     padding: 13px;
 
     height: 75px;
+}
+
+.subcharte{
+	color:white;
+	font-size: 14px;
+	background: rgba(255,255,255,.05);
+	margin: 20px 0;
+	padding: 26px 41px;
+	border-radius: 3px;
+	vertical-align: top;
+}
+
+#charte span{
+	color: rgb(168, 27, 27);
+	font-size:1.5em;
+	border:1px dashed white;;
+	padding:13px 20px;
+	border-radius:30px;
+	margin-right:30px;
+}
+.charte-accept{
+	color: white;
+	width: 200px;
+	/* background: rgb(25, 25, 25); */
+	text-align:center;
+	padding:10px;
+	font-size: 12px;
+	text-transform: uppercase;
+	margin: 5px auto;
+	
+
+	border-radius: 3px;
 }
