--- a/public/css/landing.css
+++ b/public/css/landing.css
@@ -1,7 +1,9 @@
 
 #landingWrap{
-    top: -100px;
+    width: 100%;
  
+    clear: both;
+    overflow: auto;
 }
 
 #landingIntro{
@@ -31,10 +33,13 @@
 }
 
 #landingWrap h2{
-	/* font-family:'Lato'; */
-	font-size: 1.4em;
-	letter-spacing: -1px;
-	margin-top: 30px;
+	font-family: 'Raleway';
+	text-transform: uppercase;
+	font-weight: bolder;
+	text-align: center;
+	margin-bottom: 15px;
+	color: rgb(58, 58, 58);
+	font-size: 25px;
 }
 
 .l-item{
